# medical_coding_assistant

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline_inference.py  client.py  grading.py  icd_codeset_train.py  inference.py  models.py  offline_train.py  openenv.yaml  pyproject.toml  requirements.txt  simulate_learning.py  tasks.py
openenv_medical_coding_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/: learner_warmup1000_baseline.pkl
server/: Dockerfile  __init__.py  app.py  medical_coding_environment.py  requirements.txt
